--- a/client/leaderboard/Leaderboard.html
+++ b/client/leaderboard/Leaderboard.html
@@ -59,22 +59,6 @@
   </script>
 </body>
 
-<template name="leaderboard">
-  <div class="leaderboard">
-    {{#each students}}
-      {{> student}}
-    {{/each}}
-  </div>
-</template>
-
-<template name="student">
-  <div class="student">
-    <span class="name">{{firstName}}</span>
-    <span class="lastName">{{lastName}}</span>
-    <span class="totalScore">{{sumEarnedScore}}</span>
-  </div>
-</template>
-
 <template name="sortings">
   <div class="sortings">
     <li>
@@ -86,5 +70,51 @@
     <li>
       <a href class="sortLastName">Last Name</a>
     </li>
+    <li>
+      <a href class="sortGrade">Grade</a>
+    </li>
   </div>
+</template>
+
+<template name="leaderboard">
+  <div class="leaderboard">
+    <div class="table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Rank</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Grade</th>
+            <th>Ex1</th>
+            <th>Ex2</th>
+            <th>Ex3</th>
+            <th>Ex4</th>
+            <th>Ex5</th>
+            <th>Total Score</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each students}}
+            {{> student}}
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
+  </div>
+</template>
+
+<template name="student">
+    <tr>
+      <td>{{rank}}</td>
+      <td>{{firstName}}</td>
+      <td>{{lastName}}</td>
+      <td>{{grade}}</td>
+      <td>TODO</td> <!-- Exam 1 -->
+      <td>TODO</td> <!-- Exam 2 -->
+      <td>TODO</td> <!-- Exam 3 -->
+      <td>TODO</td> <!-- Exam 4 -->
+      <td>TODO</td> <!-- Exam 5 -->
+      <td>{{sumEarnedScore}}</td>
+    </tr>
 </template>
