--- a/client/leaderboard/Leaderboard.html
+++ b/client/leaderboard/Leaderboard.html
@@ -1,96 +1,44 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>AML Leaderboard</title>
-
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
   <link href="css/leaderboard.css" rel="stylesheet">
+
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body style="margin:0; padding:0;">
-  <div id="wrapper">
-    <!-- Sidebar -->
-    <div id="sidebar-wrapper">
-      <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-          Sorting Options
-        </li>
-        {{> sortings}}
-      </ul>
-    </div>
-    <!-- /#sidebar-wrapper -->
-
-    <!-- Page Content -->
-    <div id="page-content-wrapper">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-            <h1>AML Leaderboard</h1>
-            <a class="btn btn-default" id="menu-toggle">Toggle Sidebar</a>
-          </div>
-        </div>
+<body style="padding-top:0">
+  <div class="container-fluid">
+    <h1>Aragon Math League 2015 - 2016 Leaderboard</h1>
+    <p> Click on a column heading to sort the table based on that column. Click again to toggle between ascending and descending order.</p>
+    <div class="row">
+      <div class="col-lg-12">
         {{> leaderboard}}
       </div>
     </div>
-  <!-- /#page-content-wrapper -->
   </div>
-  <!-- /#wrapper -->
-
-  <!-- jQuery -->
-  <script type="text/html" src="js/jquery.js"></script>
 
   <!-- Bootstrap Core JavaScript -->
   <script type="text/html" src="js/bootstrap.min.js"></script>
-
-  <!-- Menu Toggle Script -->
-  <script>
-    $("#menu-toggle").click(function(event) {
-        event.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
-    $("#menu-toggle").mouseup(function() {
-      $(this).blur();
-    });
-  </script>
 </body>
-
-<template name="sortings">
-  <div class="sortings">
-    <li>
-      <a href class="sortTotal">Rank (Total Score)</a>
-    </li>
-    <li>
-      <a href class="sortFirstName">First Name</a>
-    </li>
-    <li>
-      <a href class="sortLastName">Last Name</a>
-    </li>
-    <li>
-      <a href class="sortGrade">Grade</a>
-    </li>
-  </div>
-</template>
 
 <template name="leaderboard">
   <div class="leaderboard">
     <div class="table-responsive">
-      <table class="table table-striped">
+      <table class="table table-bordered table-striped">
         <thead>
           <tr>
-            <th>Rank</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Grade</th>
-            <th>Ex1</th>
-            <th>Ex2</th>
-            <th>Ex3</th>
-            <th>Ex4</th>
-            <th>Ex5</th>
+            <th><a href class="sortTotalScore">Rank</a></th>
+            <th><a href class="sortFirstName">First Name</a></th>
+            <th><a href class="sortLastName">Last Name</a></th>
+            <th><a href class="sortSchool">School</a></th>
+            <th><a href class="sortGrade">Grade</a></th>
+            <th><a href class="sortExam1">Ex1</a></th>
+            <th><a href class="sortExam2">Ex2</a></th>
+            <th><a href class="sortExam3">Ex3</a></th>
+            <th><a href class="sortExam4">Ex4</a></th>
+            <th><a href class="sortExam5">Ex5</a></th>
             <th>Total Score</th>
           </tr>
         </thead>
@@ -109,12 +57,13 @@
       <td>{{rank}}</td>
       <td>{{firstName}}</td>
       <td>{{lastName}}</td>
+      <td>{{school}}</td>
       <td>{{grade}}</td>
-      <td>TODO</td> <!-- Exam 1 -->
-      <td>TODO</td> <!-- Exam 2 -->
-      <td>TODO</td> <!-- Exam 3 -->
-      <td>TODO</td> <!-- Exam 4 -->
-      <td>TODO</td> <!-- Exam 5 -->
-      <td>{{sumEarnedScore}}</td>
+      <td>{{exam1}}</td>
+      <td>{{exam2}}</td>
+      <td>{{exam3}}</td>
+      <td>{{exam4}}</td>
+      <td>{{exam5}}</td>
+      <td>{{totalScore}}</td>
     </tr>
 </template>
