fixed bugs with null object, changed header to its own template

--- a/client/leaderboard/Leaderboard.html
+++ b/client/leaderboard/Leaderboard.html
@@ -1,13 +1,4 @@
-<head>
-  <title>AML Leaderboard</title>
-
-  <!-- Custom CSS -->
-  <link href="css/leaderboard.css" rel="stylesheet">
-
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-</head>
-
+<template name = "Leaderboard_container">
 <body style="padding-top:0">
   <div class="container-fluid">
     <h1>Aragon Math League 2015 - 2016 Leaderboard</h1>
@@ -22,6 +13,7 @@
   <!-- Bootstrap Core JavaScript -->
   <script type="text/html" src="js/bootstrap.min.js"></script>
 </body>
+</template>
 
 <template name="leaderboard">
   <div class="leaderboard">
