--- a/client/leaderboard/Leaderboard.html
+++ b/client/leaderboard/Leaderboard.html
@@ -1,36 +1,49 @@
-<template name = "LeaderboardContainer">
-  <body style="padding-top:0">
-    <div class="container-fluid">
-      <h1>Aragon Math League 2015 - 2016 Leaderboard</h1>
-      <p> Click on a column heading to sort the table based on that column. Click again to toggle between ascending and descending order.</p>
-      <div class="row">
-        <div class="col-lg-12">
-          {{> leaderboard}}
-        </div>
-      </div>
-    </div>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script type="text/html" src="js/bootstrap.min.js"></script>
-  </body>
-</template>
-
-<template name="leaderboard">
+<template name="Leaderboard">
   <div class="leaderboard">
     <div class="table-responsive">
       <table class="table table-bordered table-striped">
         <thead>
           <tr>
-            <th><a href class="sortTotalScore">Rank</a></th>
-            <th><a href class="sortFirstName">First Name</a></th>
-            <th><a href class="sortLastName">Last Name</a></th>
-            <th><a href class="sortSchool">School</a></th>
-            <th><a href class="sortGrade">Grade</a></th>
-            <th><a href class="sortExam1">Ex1</a></th>
-            <th><a href class="sortExam2">Ex2</a></th>
-            <th><a href class="sortExam3">Ex3</a></th>
-            <th><a href class="sortExam4">Ex4</a></th>
-            <th><a href class="sortExam5">Ex5</a></th>
+            <th>
+              <a href class="sort_totalScore">Rank</a>
+              <span class="arrow">{{{arrow "totalScore"}}}</span>
+            </th>
+            <th>
+              <a href class="sort_firstName">First Name</a>
+              <span class="arrow">{{{arrow "firstName"}}}</span>
+            </th>
+            <th>
+              <a href class="sort_lastName">Last Name</a>
+              <span class="arrow">{{{arrow "lastName"}}}</span>
+            </th>
+            <th>
+              <a href class="sort_school">School</a>
+              <span class="arrow">{{{arrow "school"}}}</span>
+            </th>
+            <th>
+              <a href class="sort_grade">Grade</a>
+              <span class="arrow">{{{arrow "grade"}}}</span>
+            </th>
+            <th>
+              <a href class="sort_exam1">Ex1</a>
+              <span class="arrow">{{{arrow "exam1"}}}</span>
+            </th>
+            <th>
+              <a href class="sort_exam2">Ex2</a>
+              <span class="arrow">{{{arrow "exam2"}}}</span>
+            </th>
+            <th>
+              <a href class="sort_exam3">Ex3</a>
+              <span class="arrow">{{{arrow "exam3"}}}</span>
+            </th>
+            <th>
+              <a href class="sort_exam4">Ex4</a>
+              <span class="arrow">{{{arrow "exam4"}}}</span>
+            </th>
+            <th>
+              <a href class="sort_exam5">Ex5</a>
+              <span class="arrow">{{{arrow "exam5"}}}</span>
+            </th>
             <th>Total Score</th>
           </tr>
         </thead>
