--- a/client/input/Input.html
+++ b/client/input/Input.html
@@ -1,14 +1,71 @@
 <template name="Input">
   <form class="form-horizontal">
-    {{#with field="firstName"}}
-      {{> inputAutocomplete settings=settings id="firstName" class="form-control" name="legend"}}
-    {{/with}}
-    {{#with field="lastName"}}
-      {{> inputAutocomplete settings=settings id="lastName" class="form-control"}}
-    {{/with}}
+
+    <div class="form-group row" id="changeScore">
+      <label for="firstName" class="col-md-1 control-label">First: </label>
+      <div class="col-md-2">
+        {{#with field="firstName"}}
+          {{> inputAutocomplete settings=settings id="firstName" class="form-control" name="legend"}}
+        {{/with}}
+      </div>
+      
+    <label for="lastName" class="col-md-1 control-label">Last: </label>
+      <div class="col-md-2">
+        {{#with field="lastName"}}
+          {{> inputAutocomplete settings=settings id="lastName" class="form-control"}}
+        {{/with}}
+      </div>
+      </div>
+    <div class="form-group row">
+      <label for="school" class="col-md-1 control-label">School: </label>
+      <div class="col-md-2">
+        {{#with field="school"}}
+          {{> inputAutocomplete settings=settings id="school" class="form-control" name="legend"}}
+        {{/with}}
+      </div>
+      
+    <label for="grade" class="col-md-1 control-label">Grade: </label>
+      <div class="col-md-2">
+        <input id="grade" class="form-control" type="number" step="1" min="5" max="12">
+
+      </div>
+     </div>
+     <div class="form-group-row row">
+       <label for="exam1" class="col-md-1 control-label">1 </label>
+       <div class="col-md-1">
+         <input id="exam1" class="form-control" type="number" step="1" min="0" max="6">
+       </div>
+
+       <label for="exam2" class="col-md-1 control-label">2 </label>
+       <div class="col-md-1">
+         <input id="exam2" class="form-control" type="number" step="1" min="0" max="6">
+       </div>
+
+       <label for="exam3" class="col-md-1 control-label">3 </label>
+       <div class="col-md-1">
+         <input id="exam3" class="form-control" type="number" step="1" min="0" max="6">
+       </div>
+     </div>
+     <div class="form-group-row row">
+
+       <label for="exam4" class="col-md-1 control-label">4 </label>
+       <div class="col-md-1">
+         <input id="exam4" class="form-control" type="number" step="1" min="0" max="6">
+       </div>
+
+       <label for="exam5" class="col-md-1 control-label">5 </label>
+       <div class="col-md-1">
+         <input id="exam5" class="form-control" type="number" step="1" min="0" max="6">
+       </div>
+     </div>
+    <input type="submit">
   </form>
 </template>
 
 <template name="standard">
   {{firstName}} {{lastName}} 
+</template>
+
+<template name="schoolAutocomplete">
+  {{name}}
 </template>
