--- a/client/leaderboard/Leaderboard.html
+++ b/client/leaderboard/Leaderboard.html
@@ -44,10 +44,26 @@
               <a href class="sort_exam5">Ex5</a>
               <span class="arrow">{{{arrow "exam5"}}}</span>
             </th>
-            <th>Total Score</th>
+            <th>
+              <a href class="sort_totalScore">Total Score</a>
+              <span class="arrow">{{{arrow "totalScore"}}}</span>
+            </th>
           </tr>
         </thead>
         <tbody>
+          <tr>
+            <td> Average: </td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>{{average "exam1" students}}</td>
+            <td>{{average "exam2" students}}</td>
+            <td>{{average "exam3" students}}</td>
+            <td>{{average "exam4" students}}</td>
+            <td>{{average "exam5" students}}</td>
+            <td>{{average "totalScore" students}}</td>
+          </tr>
           {{#each students}}
             {{> student}}
           {{/each}}
