Added basic filtering

--- a/client/leaderboard/Leaderboard.html
+++ b/client/leaderboard/Leaderboard.html
@@ -44,15 +44,12 @@
               <a href class="sort_exam5">Ex5</a>
               <span class="arrow">{{{arrow "exam5"}}}</span>
             </th>
-            <th>
-              <a href class="sort_totalScore">Total Score</a>
-              <span class="arrow">{{{arrow "totalScore"}}}</span>
-            </th>
+            <th>Total Score</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td> Average: </td>
+            <td>Average</td>
             <td></td>
             <td></td>
             <td></td>
