--- a/client/input/Input.html
+++ b/client/input/Input.html
@@ -23,42 +23,45 @@
           {{> inputAutocomplete settings=settings id="school" class="form-control" autocomplete="off"}}
         {{/with}}
       </div>
-      
-    <label for="grade" class="col-md-1 control-label">Grade: </label>
-      <div class="col-md-2">
-        <input id="grade" class="form-control" type="number" step="1" min="5" max="12">
+    {{#if currentUser}}
+      <label for="grade" class="col-md-1 control-label">Grade: </label>
+        <div class="col-md-2">
+          <input id="grade" class="form-control" type="number" step="1" min="5" max="12">
 
-      </div>
+        </div>
+    {{/if}}
      </div>
-     <div class="form-group-row row">
-       <label for="exam1" class="col-md-1 control-label">1 </label>
-       <div class="col-md-1">
-         <input id="exam1" class="form-control" type="number" step="1" min="0" max="6">
-       </div>
+     {{#if currentUser}}
+       <div class="form-group-row row">
+         <label for="exam1" class="col-md-1 control-label">1 </label>
+         <div class="col-md-1">
+           <input id="exam1" class="form-control" type="number" step="1" min="0" max="6">
+         </div>
 
-       <label for="exam2" class="col-md-1 control-label">2 </label>
-       <div class="col-md-1">
-         <input id="exam2" class="form-control" type="number" step="1" min="0" max="6">
-       </div>
+         <label for="exam2" class="col-md-1 control-label">2 </label>
+         <div class="col-md-1">
+           <input id="exam2" class="form-control" type="number" step="1" min="0" max="6">
+         </div>
 
-       <label for="exam3" class="col-md-1 control-label">3 </label>
-       <div class="col-md-1">
-         <input id="exam3" class="form-control" type="number" step="1" min="0" max="6">
+         <label for="exam3" class="col-md-1 control-label">3 </label>
+         <div class="col-md-1">
+           <input id="exam3" class="form-control" type="number" step="1" min="0" max="6">
+         </div>
        </div>
-     </div>
-     <div class="form-group-row row">
+       <div class="form-group-row row">
 
-       <label for="exam4" class="col-md-1 control-label">4 </label>
-       <div class="col-md-1">
-         <input id="exam4" class="form-control" type="number" step="1" min="0" max="6">
-       </div>
+         <label for="exam4" class="col-md-1 control-label">4 </label>
+         <div class="col-md-1">
+           <input id="exam4" class="form-control" type="number" step="1" min="0" max="6">
+         </div>
 
-       <label for="exam5" class="col-md-1 control-label">5 </label>
-       <div class="col-md-1">
-         <input id="exam5" class="form-control" type="number" step="1" min="0" max="6">
+         <label for="exam5" class="col-md-1 control-label">5 </label>
+         <div class="col-md-1">
+           <input id="exam5" class="form-control" type="number" step="1" min="0" max="6">
+         </div>
        </div>
-     </div>
-    <input type="submit">
+      <input type="submit">
+    {{/if}}
   </form>
 </template>
 
